Rework filters interace (major rewrite)(

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
   padding-left: 52px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* ===== Scrollbar CSS ===== */
@@ -21,9 +21,25 @@ body *::-webkit-scrollbar-thumb {
   border: 3px solid #fff;
 }
 
+#viewport {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:70px;
+  right: 0;
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
 h1 {
   font-weight: normal;
   border-bottom: 1px solid;
+  font-size: 2em;
+}
+
+#chartContianer {
+  width: 100%;
+  height: calc(100% - 2em - 10px);
 }
 
 a {
@@ -77,6 +93,11 @@ a {
 
 #tooltip table {
   width: 100;
+  white-space: nowrap;
+}
+
+#tooltip table td {
+  padding: 0 0.25em;
 }
 
 #sidebar {
@@ -335,6 +356,7 @@ https://github.com/alphagov/accessible-autocomplete/blob/main/src/autocomplete.c
 
 .autocomplete__hint,
 .autocomplete__input {
+  appearance: none;
   -webkit-appearance: none;
   /* border: 2px solid #0b0c0c; */
   border-radius: 0; /* Safari 10 on iOS adds implicit border rounding. */
@@ -431,4 +453,50 @@ https://github.com/alphagov/accessible-autocomplete/blob/main/src/autocomplete.c
   border-color: #1d70b8;
   color: white;
   outline: none;
+}
+
+
+.filter_dropdown {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 0.25em;
+  padding: 0.1em 0.25em 0.1em 0.5em;
+}
+
+.filter_dropdown:hover {
+  border-radius: 0.25em;
+  box-shadow: #999 1px 2px 2px 1px;
+}
+
+.filter_arrow {
+  user-select: none;
+  font-size: 1em;
+}
+
+.datatable .filter_dropdown .filter_arrow {
+  visibility: hidden;
+}
+
+.datatable .filter_dropdown:hover .filter_arrow {
+  visibility: visible;
+}
+
+#filterDropdown {
+  border-radius: 0.25em;
+  box-shadow: #999 1px 2px 2px 1px;
+  display: none;
+  position: absolute;
+  z-index: 200;
+  background: #fff;
+  padding: 0.1em 0.25em 0.1em 0.5em;
+  box-sizing: border-box;
+}
+
+#filterDropdown > div {
+  cursor: pointer;
+}
+
+#filterDropdown > div:hover {
+  cursor: pointer;
+  background: #99f;
 }
