--- a/src/static/style.css
+++ b/src/static/style.css
@@ -2,7 +2,7 @@
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 100 700;
-  src: url(material-icons-outlined.woff2) format('woff2');
+  src: url(subset.woff2?1689719069) format('woff2');
 }
 
 .material-symbols-outlined {
